etc/iptables/ip6tables.rules
#!/usr/bin/false
# IP6Tables Configuration.
#
# System Management Daemon
#
# Copyright (C) 2016 - 2023 iDigitalFlame
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:BASE - [0:0]
-A INPUT -j BASE
-A OUTPUT -j BASE
-A BASE -i lo -j ACCEPT
-A BASE -s ::1/128 -d ::1/128 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A BASE -p ipv6-icmp -m icmp6 --icmpv6-type 135 -j ACCEPT
-A BASE -p ipv6-icmp -m icmp6 --icmpv6-type 136 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 133 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 151 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 152 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 153 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-icmp -p ipv6-icmp --icmpv6-type 128 -m limit --limit 1/sec -j ACCEPT
-A BASE -m state --state INVALID -j DROP
-A BASE -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A BASE -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 445 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-all -j ACCEPT
-A OUTPUT -m owner --uid-owner kvm -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --uid-owner kvm -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner cups -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner proxy -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner proxy -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 11371 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 546:547 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ssh -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ftp -p tcp --dport 20 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ftp -p tcp --dport 21 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ftp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-web -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-web -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-web -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-web -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-db -p tcp --dport 1433 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-db -p tcp --dport 3306 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-mail -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-mail -p tcp --dport 587 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-mail -p tcp --dport 993 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-timesync -p udp --dport 123 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ctl -p tcp --dport 3389 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-ctl -p tcp --dport 5900:5910 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-voice -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner firewall-voice -p udp --dport 50000:60000 -j ACCEPT
COMMIT
